src/manifest/route-fakeecs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecs-backend-route
  namespace: kgateway-system
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "kgateway.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ecs
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: fake-ecs-lb
          kind: Backend
          group: gateway.kgateway.dev
